--- a/imagemaker.html
+++ b/imagemaker.html
@@ -18,7 +18,6 @@
             margin: 0;
             padding: 20px;
         }
-
         .container {
             text-align: center;
             background: linear-gradient(145deg, #1a1a1a, #222);
@@ -28,91 +27,42 @@
             max-width: 90%;
             border: 2px solid #333;
         }
-
-        h1 {
-            font-family: 'Orbitron', sans-serif;
-            font-size: 24px;
-            color: #ffcc00;
-            text-shadow: 0px 0px 10px rgba(255, 204, 0, 0.6);
-        }
-
-        .section {
-            background-color: #2c2c2c;
+        .category {
+            background: #181818;
             padding: 15px;
-            margin-bottom: 20px;
+            margin: 10px 0;
             border-radius: 8px;
-            border: 1px solid #444;
+            border: 2px solid #333;
         }
-
-        .section h3 {
-            margin: 0;
-            font-size: 20px;
+        h2 {
             color: #ffcc00;
-            margin-bottom: 10px;
         }
-
-        .section label {
-            font-size: 16px;
-            font-weight: bold;
-            display: block;
-            margin-top: 10px;
-        }
-
-        .section input, .section select {
-            margin-top: 5px;
-            width: 90%;
-            max-width: 400px;
+        button, select, input {
+            margin: 8px;
             padding: 10px;
             font-size: 14px;
-            display: block;
             border: 2px solid #555;
-            background: #181818;
+            background: #222;
             color: white;
             border-radius: 6px;
             outline: none;
             transition: 0.3s;
         }
-
-        .section input[type="color"] {
-            padding: 0;
-            width: 80px;
-        }
-
         button {
-            padding: 12px;
-            font-size: 14px;
-            cursor: pointer;
             background: linear-gradient(145deg, #ffcc00, #ffaa00);
-            color: black;
-            border: none;
-            border-radius: 6px;
-            margin: 10px 0;
-            width: 90%;
-            max-width: 400px;
+            cursor: pointer;
             font-weight: bold;
-            text-transform: uppercase;
-            transition: 0.3s;
         }
-
         button:hover {
             background: linear-gradient(145deg, #ffaa00, #ff9900);
-            box-shadow: 0px 0px 10px rgba(255, 165, 0, 0.7);
         }
-
         canvas {
             border: 2px solid #ffcc00;
             margin-top: 15px;
             background: black;
-            width: 100%;
-            max-width: 600px;
+            width: 600px;
             height: 400px;
             border-radius: 8px;
-        }
-
-        @media (max-width: 768px) {
-            canvas {
-                max-width: 90%;
-            }
         }
     </style>
 </head>
@@ -120,112 +70,62 @@
     <div class="container">
         <h1>⚽ Football Badge Graphic Maker ⚽</h1>
 
-        <!-- Background Section -->
-        <div class="section">
-            <h3>Background</h3>
-            <label for="backgroundSelect">Choose Background:</label>
+        <div class="category">
+            <h2>Badges</h2>
+            <input type="file" id="badge1" accept="image/*">
+            <input type="file" id="badge2" accept="image/*">
+        </div>
+
+        <div class="category">
+            <h2>Text</h2>
+            <textarea id="customText" placeholder="Enter match details"></textarea>
+            <label>Text Color:</label>
+            <input type="color" id="textColor" value="#ffcc00">
+            <label>Choose Font:</label>
+            <select id="fontSelect"></select>
+        </div>
+
+        <div class="category">
+            <h2>Background</h2>
+            <label>Select Background:</label>
             <select id="backgroundSelect">
                 <option value="https://i.ibb.co/MDbx54hm/image.png">Standard</option>
                 <option value="https://i.ibb.co/1GXsP8NT/image.png">Champions League</option>
                 <option value="https://i.ibb.co/bgxnc11X/image.png">Spanish RED</option>
                 <option value="https://i.ibb.co/bgRhxY8k/image.png">Europa League</option>
-                <option value="https://i.ibb.co/v40fk3jz/image.png">Black with Gradient</option>
+                <option value="https://i.ibb.co/v40fk3jz/image.png">Black Gradient</option>
             </select>
-        </div>
-
-        <!-- Badges Section -->
-        <div class="section">
-            <h3>Badges</h3>
-            <label for="badge1File">Upload Badge 1 (or use URL):</label>
-            <input type="file" id="badge1File" accept="image/*" />
-            <input type="text" id="badge1Url" placeholder="Enter Badge 1 URL" />
-            
-            <label for="badge2File">Upload Badge 2 (or use URL):</label>
-            <input type="file" id="badge2File" accept="image/*" />
-            <input type="text" id="badge2Url" placeholder="Enter Badge 2 URL" />
-        </div>
-
-        <!-- Text Section -->
-        <div class="section">
-            <h3>Text</h3>
-            <textarea id="customText" placeholder="Enter match details (each line will be centered)"></textarea>
-            <label for="textColor">Text Color:</label>
-            <input type="color" id="textColor" value="#ffcc00" />
-            <label for="glowIntensity">Glow Intensity:</label>
-            <input type="range" id="glowIntensity" min="0" max="20" value="8" />
-            <label for="fontSelect">Choose Font:</label>
-            <select id="fontSelect">
-                <option value="'League Spartan', sans-serif">League Spartan</option>
-                <option value="'Orbitron', sans-serif">Orbitron</option>
-                <option value="'Roboto', sans-serif">Roboto</option>
-                <option value="'Oswald', sans-serif">Oswald</option>
-                <option value="'Arial', sans-serif">Arial</option>
-                <option value="'Courier New', monospace">Courier New</option>
-                <option value="'Georgia', serif">Georgia</option>
-                <option value="'Impact', sans-serif">Impact</option>
-                <option value="'Tahoma', sans-serif">Tahoma</option>
-                <option value="'Verdana', sans-serif">Verdana</option>
-            </select>
-        </div>
-
-        <!-- Hue/Saturation/Brightness Section -->
-        <div class="section">
-            <h3>Background Adjustments</h3>
-            <label for="hue">Hue:</label>
-            <input type="range" id="hue" min="0" max="360" value="0" />
-            <label for="brightness">Brightness:</label>
-            <input type="range" id="brightness" min="0" max="200" value="100" />
-            <label for="saturation">Saturation:</label>
-            <input type="range" id="saturation" min="0" max="200" value="100" />
+            <label>Background Color:</label>
+            <input type="color" id="bgColor" value="#000000">
         </div>
 
         <button onclick="generateGraphic()">Generate Graphic</button>
         <canvas id="canvas" width="600" height="400"></canvas>
-        <button onclick="downloadImage()">Download Graphic</button>
+        <button onclick="downloadImage()">Download</button>
     </div>
 
     <script>
         const canvas = document.getElementById('canvas');
         const ctx = canvas.getContext('2d');
-
-        let badge1 = null;
-        let badge2 = null;
+        let badge1 = null, badge2 = null;
         let background = new Image();
-        background.src = 'https://i.ibb.co/MDbx54hm/image.png'; // Default background
+        background.src = document.getElementById('backgroundSelect').value;
 
-        // Handle background selection change
+        document.getElementById('badge1').addEventListener('change', handleFileSelect);
+        document.getElementById('badge2').addEventListener('change', handleFileSelect);
         document.getElementById('backgroundSelect').addEventListener('change', function() {
-            const selectedBackground = this.value;
-            background.src = selectedBackground;
-        });
-
-        // Handle badge file input changes
-        document.getElementById('badge1File').addEventListener('change', handleFileSelect);
-        document.getElementById('badge2File').addEventListener('change', handleFileSelect);
-
-        // Handle badge URL input changes
-        document.getElementById('badge1Url').addEventListener('input', function() {
-            badge1 = new Image();
-            badge1.src = this.value;
-        });
-        document.getElementById('badge2Url').addEventListener('input', function() {
-            badge2 = new Image();
-            badge2.src = this.value;
+            background.src = this.value;
         });
 
         function handleFileSelect(event) {
             const file = event.target.files[0];
             const reader = new FileReader();
-
             reader.onload = function(e) {
                 const img = new Image();
                 img.src = e.target.result;
                 img.onload = function() {
-                    if (event.target.id === 'badge1File') {
-                        badge1 = img;
-                    } else if (event.target.id === 'badge2File') {
-                        badge2 = img;
-                    }
+                    if (event.target.id === 'badge1') badge1 = img;
+                    else if (event.target.id === 'badge2') badge2 = img;
                 };
             };
             reader.readAsDataURL(file);
@@ -237,48 +137,28 @@
                 return;
             }
 
-            const customText = document.getElementById('customText').value.trim();
-            const textLines = customText.split('\n');
-            const textColor = document.getElementById('textColor').value;
-            const glowIntensity = document.getElementById('glowIntensity').value;
-            const selectedFont = document.getElementById('fontSelect').value;
-
-            const hue = document.getElementById('hue').value;
-            const brightness = document.getElementById('brightness').value;
-            const saturation = document.getElementById('saturation').value;
-
             ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-            // Apply the background adjustments
-            ctx.filter = `hue-rotate(${hue}deg) brightness(${brightness}%) saturate(${saturation}%)`;
+            ctx.fillStyle = document.getElementById('bgColor').value;
+            ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.drawImage(background, 0, 0, canvas.width, canvas.height);
-            ctx.filter = 'none'; // Reset the filter for other elements
 
-            const badgeWidth = 180;
-            const badgeHeight = 180;
-            const badge1X = 70;
-            const badge1Y = 100;
-            const badge2X = 350;
-            const badge2Y = 100;
+            const badgeWidth = 160, badgeHeight = 160;
+            const badge1X = canvas.width / 2 + 70; // Badge 1 aligned to the right
+            const badge2X = canvas.width / 2 - badgeWidth - 70; // Badge 2 aligned to the left
+            const badgeY = 100;
+            ctx.drawImage(badge1, badge1X, badgeY, badgeWidth, badgeHeight);
+            ctx.drawImage(badge2, badge2X, badgeY, badgeWidth, badgeHeight);
 
-            ctx.drawImage(badge1, badge1X, badge1Y, badgeWidth, badgeHeight);
-            ctx.drawImage(badge2, badge2X, badge2Y, badgeWidth, badgeHeight);
-
-            ctx.font = `30px ${selectedFont}`;
-            ctx.fillStyle = textColor;
-            ctx.textAlign = 'center';
-            ctx.textBaseline = 'middle';
-            
-            let yOffset = badge1Y + badgeHeight + 20;
-            textLines.forEach((line, index) => {
-                ctx.fillText(line, canvas.width / 2, yOffset + (index * 40));
-            });
+            ctx.fillStyle = document.getElementById('textColor').value;
+            ctx.font = '30px ' + document.getElementById('fontSelect').value;
+            ctx.textAlign = "center";
+            ctx.fillText(document.getElementById('customText').value, canvas.width / 2, 280);
         }
 
         function downloadImage() {
             const link = document.createElement('a');
+            link.href = canvas.toDataURL();
             link.download = 'football_badge_graphic.png';
-            link.href = canvas.toDataURL('image/png');
             link.click();
         }
     </script>
