--- a/gallery.html
+++ b/gallery.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
     <title>Sportwave News</title>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
@@ -17,15 +15,18 @@
             color: #fff;
             line-height: 1.6;
         }
+
         .container {
             max-width: 1000px;
             margin: 2rem auto;
             padding: 1rem;
         }
+
         h1 {
             text-align: center;
             font-size: 3rem;
         }
+
         #search {
             width: 100%;
             padding: 0.8rem;
@@ -34,60 +35,65 @@
             border-radius: 12px;
             font-size: 1rem;
         }
+
         .news-item {
             background: #1e1e1e;
             padding: 1.5rem;
             margin-bottom: 1.5rem;
             border-radius: 16px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-            height: auto;
         }
+
         .news-item h2 {
             font-size: 1.8rem;
         }
+
         .news-item a {
             color: #00bcd4;
             text-decoration: none;
         }
+
         .news-item a:hover {
             text-decoration: underline;
         }
+
         .carousel {
-            position: relative;
-            max-width: 100%;
-            margin: 1rem 0;
+            display: flex;
             overflow: hidden;
-            height: 0;
+            position: relative;
+            width: 100%;
         }
+
         .carousel img {
             width: 100%;
-            height: auto;
             display: none;
         }
+
         .carousel img.active {
             display: block;
         }
-        .carousel-control {
+
+        .carousel-btn {
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
-            background-color: rgba(0, 0, 0, 0.5);
-            color: #fff;
+            background: rgba(0, 0, 0, 0.5);
+            color: white;
             border: none;
-            padding: 0.5rem;
+            padding: 10px;
             cursor: pointer;
         }
-        .carousel-control.left {
+
+        .prev {
             left: 10px;
         }
-        .carousel-control.right {
+
+        .next {
             right: 10px;
-        }
-        .description {
-            display: block;
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>Sportwave News</h1>
@@ -96,27 +102,47 @@
     </div>
 
     <script>
-        // Prevent using cookies
-        document.cookie = "name=value; expires=Thu, 01 Jan 1970 00:00:00 GMT"; // Delete any cookies
-        
-        // Disable localStorage and sessionStorage usage:
-        if (typeof(Storage) !== "undefined") {
-            // Clear storage if it's already populated
-            localStorage.clear();
-            sessionStorage.clear();
-        }
-
-        // Disable caching via JavaScript
         const rssFeedUrl = 'https://sportwaveannouncements.blogspot.com/feeds/posts/default';
 
         async function fetchRSS() {
             try {
-                const response = await fetch(`https://api.rss2json.com/v1/api.json?rss_url=${encodeURIComponent(rssFeedUrl)}&cache=0`);
+                const response = await fetch(`https://api.rss2json.com/v1/api.json?rss_url=${encodeURIComponent(rssFeedUrl)}`);
                 const data = await response.json();
                 displayNews(data.items);
             } catch (error) {
                 console.error('Error fetching RSS feed:', error);
             }
+        }
+
+        function extractImagesFromDescription(description) {
+            const imageUrls = [];
+            const imgTags = description.match(/<img[^>]+src="([^"]+)"[^>]*>/g) || [];
+
+            imgTags.forEach(imgTag => {
+                const urlMatch = imgTag.match(/src="([^"]+)"/);
+                if (urlMatch) {
+                    let imageUrl = urlMatch[1];
+
+                    // Replace small images with large images
+                    imageUrl = imageUrl.replace(/\/s\d+\//, '/s1920/');
+                    imageUrls.push(imageUrl);
+                }
+            });
+
+            return imageUrls;
+        }
+
+        function createImageCarousel(images) {
+            if (images.length <= 1) return '';
+
+            let carouselHTML = `
+                <div class="carousel">
+                    ${images.map((img, index) => `<img src="${img}" class="${index === 0 ? 'active' : ''}" alt="news image">`).join('')}
+                    <button class="carousel-btn prev" onclick="prevSlide(this)">❮</button>
+                    <button class="carousel-btn next" onclick="nextSlide(this)">❯</button>
+                </div>
+            `;
+            return carouselHTML;
         }
 
         function displayNews(items) {
@@ -126,136 +152,45 @@
             items.forEach(item => {
                 const newsItem = document.createElement('div');
                 newsItem.className = 'news-item';
+                
+                const images = extractImagesFromDescription(item.description);
+                const carousel = createImageCarousel(images);
 
-                // Clean the description to remove any images
-                let cleanedDescription = item.description.replace(/<img[^>]*>/g, '');
-
-                // Add the title and cleaned description
-                let htmlContent = `
+                newsItem.innerHTML = `
                     <h2>${item.title}</h2>
-                    <p class="description">${cleanedDescription}</p>
+                    ${carousel}
                     <a href="${item.link}" target="_blank">Read More</a>
                 `;
 
-                // Extract image URLs from the description
-                const imageUrls = [];
-                const regex = /https:\/\/blogger\.googleusercontent\.com\/img\/[^"]+/g;
-                const matches = item.description.match(regex);
-
-                if (matches) {
-                    matches.forEach(url => {
-                        // Only include full-size images (those with 's1920')
-                        if (url.includes('/s1920/')) {
-                            imageUrls.push(url); // Add only the full-size images to the array
-                        }
-                    });
-
-                    // Create carousel for the images
-                    htmlContent += `
-                        <div class="carousel">
-                            ${imageUrls.map((imgUrl, index) => {
-                                return `<img src="${imgUrl}" data-src="${imgUrl}" class="carousel-image lazy" alt="Image ${index + 1}">`;
-                            }).join('')}
-                        </div>
-                    `;
-
-                    // If there are more than one image, hide the description and show the carousel
-                    if (imageUrls.length > 1) {
-                        htmlContent = htmlContent.replace('<p class="description">', '<p class="description" style="display: none;">');
-                    }
-                }
-
-                newsItem.innerHTML = htmlContent;
-
-                // Remove elements with no text
-                const description = newsItem.querySelector('.description');
-                if (description && !description.textContent.trim()) {
-                    description.style.display = 'none';
-                }
-
-                // Check if the title or content is empty and remove the entire news item if so
-                const title = newsItem.querySelector('h2');
-                if (!title || !title.textContent.trim()) {
-                    newsItem.style.display = 'none';
-                }
-
                 container.appendChild(newsItem);
-
-                // Add carousel functionality for images
-                const carousel = newsItem.querySelector('.carousel');
-                if (carousel) {
-                    const images = carousel.getElementsByTagName('img');
-                    let currentIndex = 0;
-
-                    // Show the first image
-                    images[currentIndex].classList.add('active');
-
-                    // Add next/previous controls
-                    const prevButton = document.createElement('button');
-                    prevButton.className = 'carousel-control left';
-                    prevButton.textContent = '<';
-                    prevButton.onclick = () => changeImage(-1);
-
-                    const nextButton = document.createElement('button');
-                    nextButton.className = 'carousel-control right';
-                    nextButton.textContent = '>';
-                    nextButton.onclick = () => changeImage(1);
-
-                    carousel.appendChild(prevButton);
-                    carousel.appendChild(nextButton);
-
-                    // Change image function
-                    function changeImage(direction) {
-                        images[currentIndex].classList.remove('active');
-                        currentIndex = (currentIndex + direction + images.length) % images.length;
-                        images[currentIndex].classList.add('active');
-                    }
-
-                    // If there's more than one image, adjust the container size to match the carousel height
-                    if (images.length > 1) {
-                        carousel.style.height = `${images[0].height}px`;
-                    }
-
-                    // Lazy load images when they are in the viewport
-                    loadImagesOnScroll();
-
-                    // Check if images are in the viewport and load them
-                    function loadImagesOnScroll() {
-                        const lazyImages = document.querySelectorAll('.lazy');
-                        const imageObserver = new IntersectionObserver((entries, observer) => {
-                            entries.forEach(entry => {
-                                if (entry.isIntersecting) {
-                                    const img = entry.target;
-                                    img.src = img.getAttribute('data-src');
-                                    img.classList.remove('lazy');
-                                    observer.unobserve(img);
-                                }
-                            });
-                        }, { threshold: 0.1 });
-
-                        lazyImages.forEach(image => {
-                            imageObserver.observe(image);
-                        });
-                    }
-                }
             });
         }
 
-        document.getElementById('search').addEventListener('input', (e) => {
-            const query = e.target.value.toLowerCase();
-            const newsItems = document.querySelectorAll('.news-item');
+        function prevSlide(button) {
+            const carousel = button.parentElement;
+            const images = carousel.querySelectorAll('img');
+            let activeIndex = Array.from(images).findIndex(img => img.classList.contains('active'));
 
-            newsItems.forEach(item => {
-                const title = item.querySelector('h2').textContent.toLowerCase();
-                item.style.display = title.includes(query) ? 'block' : 'none';
-            });
-        });
+            images[activeIndex].classList.remove('active');
+            activeIndex = (activeIndex - 1 + images.length) % images.length;
+            images[activeIndex].classList.add('active');
+        }
 
-        // Initial fetch
-        fetchRSS();
+        function nextSlide(button) {
+            const carousel = button.parentElement;
+            const images = carousel.querySelectorAll('img');
+            let activeIndex = Array.from(images).findIndex(img => img.classList.contains('active'));
 
-        // Live update every 30 seconds
+            images[activeIndex].classList.remove('active');
+            activeIndex = (activeIndex + 1) % images.length;
+            images[activeIndex].classList.add('active');
+        }
+
+        // Refresh every 30 seconds
         setInterval(fetchRSS, 30000);
+
+        fetchRSS();
     </script>
 </body>
+
 </html>
