--- a/hub.html
+++ b/hub.html
@@ -3,125 +3,134 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sportwave Live Stream</title>
+    <title>Twitch Stream & Events</title>
     <script src="https://embed.twitch.tv/embed/v1.js"></script>
     <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background: #141414; /* Dark background similar to Netflix */
-            color: white;
+        * {
             margin: 0;
             padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #1b1b1b;
+            color: #fff;
             text-align: center;
-            position: relative;
-            overflow: hidden;
+            overflow-x: hidden;
+            padding: 0;
+            margin: 0;
         }
-        .logo {
-            position: absolute;
-            top: 30px;
-            left: 30px;
-            width: 150px;
-            height: auto;
-        }
-        .title-image {
-            width: 600px;
-            height: auto;
-            margin-bottom: 10px;
-            position: relative;
-            z-index: 2;
-        }
-        .content {
-            width: 90%;
+
+        .container {
             max-width: 1200px;
-            height: 700px;
-            border-radius: 15px;
-            box-shadow: 0 4px 20px rgba(255, 255, 255, 0.3);
-            overflow: hidden;
-            border: 4px solid #f8b500;
-            position: relative;
-            z-index: 2;
-            background: rgba(0, 0, 0, 0.8);
+            margin: auto;
+            padding: 30px;
         }
-        .stadium-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: url('https://i.ibb.co/qFV0Ykd5/image.png') no-repeat center center/cover;
-            opacity: 0.2;
-            z-index: 1;
+
+        h1 {
+            font-size: 3rem;
+            color: #FF6F61;
+            margin-bottom: 15px;
         }
+
+        h2 {
+            font-size: 2.2rem;
+            margin-top: 40px;
+            color: #FF6F61;
+            font-weight: 600;
+        }
+
         #twitch-embed {
+            margin-top: 20px;
             width: 100%;
-            height: 100%;
+            height: 500px;
             border-radius: 15px;
         }
-        .events-container {
-            width: 90%;
-            max-width: 1200px;
-            margin-top: 30px;
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-            gap: 20px;
-            z-index: 2;
+
+        .events {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 40px;
+            margin-top: 50px;
         }
-        .event-card {
-            background: rgba(0, 0, 0, 0.8);
-            padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0 4px 20px rgba(255, 255, 255, 0.3);
-            overflow: hidden;
+
+        .event {
+            background-color: #2c2c2c;
+            border-radius: 12px;
+            width: 300px;
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease;
+            cursor: pointer;
         }
-        .event-card img {
+
+        .event:hover {
+            transform: scale(1.05);
+            box-shadow: 0 12px 30px rgba(0, 0, 0, 0.5);
+        }
+
+        .event img {
             width: 100%;
-            border-radius: 5px;
+            height: 180px;
+            object-fit: cover;
+            border-radius: 12px 12px 0 0;
+        }
+
+        .event-info {
+            padding: 15px;
+            background-color: #383838;
+            border-radius: 0 0 12px 12px;
+        }
+
+        .event-info h3 {
+            color: #FF6F61;
+            font-size: 1.6rem;
             margin-bottom: 10px;
         }
-        .event-card h3 {
-            font-size: 18px;
-            margin: 10px 0;
+
+        .event-info p {
+            font-size: 1.1rem;
+            color: #e1e1e1;
+            margin-bottom: 10px;
         }
-        .event-card p {
-            font-size: 14px;
+
+        .event-info .location {
+            font-size: 0.9rem;
             color: #aaa;
         }
+
         .countdown {
-            font-weight: bold;
-            margin-top: 10px;
-            color: #f8b500;
+            font-weight: 600;
+            color: #FF6F61;
+            font-size: 1.2rem;
         }
-        .footer {
-            position: absolute;
-            bottom: 20px;
-            left: 0;
-            right: 0;
-            text-align: center;
-            font-size: 14px;
-            color: #aaa;
-        }
-        .footer a {
-            color: #f8b500;
-            text-decoration: none;
+
+        @media (max-width: 768px) {
+            .container {
+                padding: 15px;
+            }
+
+            .event {
+                width: 100%;
+                max-width: 400px;
+                margin-bottom: 20px;
+            }
+
+            #twitch-embed {
+                height: 350px;
+            }
         }
     </style>
 </head>
 <body>
-    <div class="stadium-overlay"></div>
-    <img src="https://i.ibb.co/vj5yj2B/Wave.png" alt="Sportwave Icon Logo" class="logo">
-    <img src="https://i.ibb.co/q30Vg4hV/1-1.png" alt="Sportwave Live Stream" class="title-image">
-    
-    <div id="stream" class="content">
+    <div class="container">
+        <h1>Watch My Twitch Stream</h1>
         <div id="twitch-embed"></div>
-    </div>
 
-    <div class="events-container" id="events-container">
-        <!-- Events will load here -->
+        <h2>Upcoming Events</h2>
+        <div class="events" id="events-container">
+            <!-- Events will load here -->
+        </div>
     </div>
 
     <script>
@@ -130,7 +139,8 @@
             height: "100%",
             channel: "sportwavelive",
             layout: "video",
-            autoplay: true
+            autoplay: true,
+            parent: ["vrfswave.github.io"]
         });
 
         const SHEET_ID = '1l0Tn9g9cXmQo8-xKOTnMNb_aJ-s9QOJbSrghOyRlvJA';
@@ -144,8 +154,8 @@
                 const rows = csvText.trim().split('\n').slice(1);
                 const events = rows.map(row => {
                     const columns = row.split(',').map(item => item.replace(/^"|"$/g, ''));
-                    const [id, title, date, location, thumbnail] = columns;
-                    return { id, title, date: formatDate(date), location, thumbnail };
+                    const [id, title, date, time, location, thumbnail] = columns;
+                    return { id, title, date: formatDate(date), time, location, thumbnail };
                 });
 
                 const container = document.getElementById('events-container');
@@ -153,17 +163,19 @@
 
                 events.forEach(event => {
                     const eventElement = document.createElement('div');
-                    eventElement.className = 'event-card';
+                    eventElement.className = 'event';
                     eventElement.innerHTML = `
                         <img src="${event.thumbnail}" alt="${event.title}">
-                        <h3>${event.title}</h3>
-                        <p>${event.location}</p>
-                        <p>${event.date}</p>
-                        <div class="countdown" id="countdown-${event.id}">Loading...</div>
+                        <div class="event-info">
+                            <h3>${event.title}</h3>
+                            <p>${event.date} at ${event.time}</p>
+                            <p class="location">${event.location}</p>
+                            <div class="countdown" id="countdown-${event.id}">Loading...</div>
+                        </div>
                     `;
                     container.appendChild(eventElement);
 
-                    startCountdown(event.date, `countdown-${event.id}`);
+                    startCountdown(event.date, event.time, `countdown-${event.id}`);
                 });
             } catch (error) {
                 console.error('Error loading events:', error);
@@ -175,17 +187,24 @@
             return `${day}/${month}/${year}`;
         }
 
-        function startCountdown(eventDate, elementId) {
+        function startCountdown(eventDate, eventTime, elementId) {
             const [day, month, year] = eventDate.split('/');
-            const targetDate = new Date(`${year}-${month}-${day}`).getTime();
+            const [hour, minute] = eventTime.split(':');
+            const targetDate = new Date(`${year}-${month}-${day}T${hour}:${minute}:00`).getTime();
+            const endDate = targetDate + (2 * 60 * 60 * 1000);  // 2 hours after the event time
 
             function updateTimer() {
                 const now = new Date().getTime();
                 const timeLeft = targetDate - now;
+                const timePassed = now - endDate;
+
+                if (timePassed > 0) {
+                    document.getElementById(elementId).textContent = 'Finished';
+                    return;
+                }
 
                 if (timeLeft <= 0) {
-                    const eventElement = document.getElementById(elementId);
-                    eventElement.textContent = 'Event Finished';
+                    document.getElementById(elementId).textContent = 'LIVE NOW!';
                     return;
                 }
 
@@ -203,9 +222,5 @@
 
         loadEvents();
     </script>
-
-    <div class="footer">
-        <p>&copy; 2025 Sportwave. All rights reserved. <a href="#">Terms</a> | <a href="#">Privacy</a></p>
-    </div>
 </body>
 </html>
